@@ -1,18 +1,0 @@
-<h1>Listing opportunities</h1>
-
-<table>
-  <tr>
-  </tr>
-
-<% for opportunity in @opportunities %>
-  <tr>
-    <td><%= link_to 'Show', opportunity %></td>
-    <td><%= link_to 'Edit', edit_opportunity_path(opportunity) %></td>
-    <td><%= link_to 'Destroy', opportunity, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New opportunity', new_opportunity_path %>
