@@ -23,38 +23,60 @@
     :url: /opportunities
 
 campaign_status:
-  :planned: Planned
-  :started: Started
-  :completed: Completed
-  :on_hold: On Hold
-  :called_off: Called Off
+  :planned       : Planned
+  :started       : Started
+  :completed     : Completed
+  :on_hold       : On Hold
+  :called_off    : Called Off
 
 campaign_status_color:
-  :planned: palegreen
-  :started: paleturquoise
-  :completed: bisque
-  :on_hold: pink
-  :called_off: thistle
+  :planned       : palegreen
+  :started       : paleturquoise
+  :completed     : bisque
+  :on_hold       : pink
+  :called_off    : thistle
 
 lead_status:
-  :new: New
-  :contacted: Contacted
-  :converted: Converted
-  :rejected: Rejected
+  :new           : New
+  :contacted     : Contacted
+  :converted     : Converted
+  :rejected      : Rejected
 
 lead_status_color:
-  :new: palegreen
-  :contacted: paleturquoise
-  :converted: bisque
-  :rejected: thistle
+  :new           : palegreen
+  :contacted     : paleturquoise
+  :converted     : bisque
+  :rejected      : thistle
 
 lead_source:
-  :campaign: Campaign
-  :cold_call: Cold Call
-  :conference: Conference
-  :online: Online Marketing
-  :referral: Referral
-  :self: Self Generated
-  :web: Web Site
-  :word_of_mouth: Word of Mouth
-  :other: Other
+  :campaign      : Campaign
+  :cold_call     : Cold Call
+  :conference    : Conference
+  :online        : Online Marketing
+  :referral      : Referral
+  :self          : Self Generated
+  :web           : Web Site
+  :word_of_mouth : Word of Mouth
+  :other         : Other
+
+opportunity_stage:
+  :prospecting   : Prospecting
+  :qualification : Qualification
+  :analysis      : Analysis
+  :presentation  : Presentation
+  :proposal      : Proposal
+  :negotiation   : Negotiation
+  :final_review  : Final Review
+  :won           : Closed/Won
+  :lost          : Closed/Lost
+
+opportunity_stage_color:
+  :prospecting   : lavender
+  :qualification : paleturquoise
+  :analysis      : mistyrose
+  :presentation  : wheat
+  :proposal      : thistle
+  :negotiation   : skyblue
+  :final_review  : aquamarine
+  :won           : lightgreen
+  :lost          : pink
