@@ -10,10 +10,9 @@ class CreateOpportunities < ActiveRecord::Migration
       t.string      :stage,   :limit => 32
       t.integer     :probability
       t.decimal     :amount,           :precision => 12, :scale => 2
-      t.decimal     :expected_revenue, :precision => 12, :scale => 2
       t.date        :close_on
-      t.datetime    :deleted_at
       t.text        :notes
+      t.datetime    :deleted_at
       t.timestamps
     end
 
