@@ -32,12 +32,14 @@
 #
 
 <% 
+  require "faker"
+
   title = [ "", "Director", "Sales Manager",  "Executive Assistant", "Marketing Manager", "Project Manager", "Product Manager", "Engineer" ]
   source = %w(campaign cold_call conference online referral self web word_of_mouth other) << ""
 
-  for i in (1..20) do
+  for i in (1 .. rand(10) + 20) do
 %>
-opportunity_<%= i %>:
+contact_<%= i %>:
   id          : <%= i %>
   user_id     : <%= rand(5) + 1 %>
   assigned_to : <%= rand(5) + 1 %>
