@@ -21,10 +21,27 @@
 #  updated_at       :datetime
 #
 
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+<%
+  require "faker"
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+  source = %w(campaign cold_call conference online referral self web word_of_mouth other) << ""
+  stage = %w(prospecting qualification analysis presentation proposal negotiation final_review won lost) << ""
+
+  for i in (1 .. rand(10) + 20) do
+%>
+opportunity_<%= i %>:
+  id          : <%= i %>
+  user_id     : <%= rand(5) + 1 %>
+  account_id  : <%= rand(5) + 1 %>
+  campaign_id : <%= (rand(5) + 1) if i > 10 %>
+  name        : <%= Faker::Lorem::sentence(rand(2) + 2).sub(".", "") %>
+  source      : <%= source[rand(source.size)] %>
+  stage       : <%= the_stage = stage[rand(stage.size)] %>
+  probability : <%= %w(won lost).include?(the_stage) ? 100 : (rand(8) + 1) * 10 %>
+  amount      : <%= (rand(8) + 1) * 100_000 %>
+  close_on    : <%= Date.today + (rand(100) + 10).days %>
+  notes       :
+  deleted_at  :
+  created_at  : <%= starts = Date.today - rand(15).days %>
+  updated_at  : <%= starts + rand(5).days %>
+<% end %>
