@@ -1,3 +1,8 @@
+Sun, Dec 28, 2008
+---------------------------------------------------------------------
+- Added opportunity stage settings and colors.
+- Created opportunities fixtures and started with opportunity index page.
+
 Sat, Dec 27, 2008
 ---------------------------------------------------------------------
 - Added find() override in [uses_mysql_uuid] plugin to make it possible to use find() instead of find_by_uuid().
